parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLASS
    COMILLAS
    DOUBLE
    ELSE
    PRIVATE
    PROTECTED
    PUBLIC
    STATIC
    VOID

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     program -> go_program
Rule 3     go_program -> package_statement import_statement function_list
Rule 4     package_statement -> PACKAGE IDENTIFICADOR
Rule 5     import_statement -> IMPORT CADENA
Rule 6     function_list -> function
Rule 7     function_list -> function function_list
Rule 8     function -> FUNC pepe ABIERTO CERRADO LLAVE_ABIERTA statement_list LLAVE_CERRADA
Rule 9     print_go_statement -> FMT PUNTO PRINTLN ABIERTO CADENA CERRADO
Rule 10    variable_declaration -> INT IDENTIFICADOR IGUAL NUMERO PUNTO_Y_COMA
Rule 11    variable_declaration_simple -> INT IDENTIFICADOR PUNTO_Y_COMA
Rule 12    float_declaration -> FLOAT IDENTIFICADOR IGUAL NUMERO PUNTO NUMERO PUNTO_Y_COMA
Rule 13    string_declaration -> STRING IDENTIFICADOR IGUAL CADENA PUNTO_Y_COMA
Rule 14    if_statement -> IF ABIERTO condition_statement AND NUMERO MAYOR NUMERO CERRADO LLAVE_ABIERTA while_statement LLAVE_CERRADA
Rule 15    while_statement -> WHILE ABIERTO IDENTIFICADOR MAYOR NUMERO CERRADO LLAVE_ABIERTA INPUT ABIERTO NUMERO CERRADO PUNTO_Y_COMA increment_statement LLAVE_CERRADA WHILE ABIERTO NUMERO MAYOR NUMERO CERRADO LLAVE_ABIERTA FOR ABIERTO IDENTIFICADOR IN RANGE ABIERTO COMA NUMERO CERRADO CERRADO LLAVE_ABIERTA IDENTIFICADOR IGUAL NUMERO POR NUMERO PUNTO_Y_COMA LLAVE_CERRADA LLAVE_CERRADA
Rule 16    print_statement -> SYSTEM PUNTO OUT PUNTO PRINTLN ABIERTO CADENA MAS IDENTIFICADOR CERRADO PUNTO_Y_COMA
Rule 17    pakatreice_statement -> DO arithmetic_operation PUNTO_Y_COMA arithmetic_operation PUNTO_Y_COMA ENDDO WHILE ABIERTO condition CERRADO ENDWHILE
Rule 18    condition -> INT IDENTIFICADOR IGUAL IGUAL NUMERO
Rule 19    condition -> IDENTIFICADOR IGUAL IGUAL NUMERO
Rule 20    library_statement -> GATO INCLUDE MENOR STDIO PUNTO H MAYOR
Rule 21    main_statement -> INT MAIN ABIERTO CERRADO LLAVE_ABIERTA line_declaration_statement for_statement RETURN NUMERO PUNTO_Y_COMA LLAVE_CERRADA
Rule 22    line_declaration_statement -> INT IDENTIFICADOR COMA IDENTIFICADOR COMA IDENTIFICADOR IGUAL NUMERO PUNTO_Y_COMA
Rule 23    for_statement -> FOR ABIERTO assignment_statement PUNTO_Y_COMA condition_statement PUNTO_Y_COMA increment_statement CERRADO LLAVE_ABIERTA arithmetic_operation PUNTO_Y_COMA arithmetic_operation PUNTO_Y_COMA LLAVE_CERRADA
Rule 24    assignment_statement -> IDENTIFICADOR IGUAL NUMERO
Rule 25    assignment_statement -> IDENTIFICADOR IGUAL IDENTIFICADOR MAS IDENTIFICADOR
Rule 26    condition_statement -> IDENTIFICADOR MENOR_IGUAL NUMERO
Rule 27    condition_statement -> IDENTIFICADOR IGUAL IGUAL NUMERO
Rule 28    condition_statement -> IDENTIFICADOR MAYOR NUMERO
Rule 29    condition_statement -> IDENTIFICADOR MAYOR_IGUAL NUMERO
Rule 30    increment_statement -> IDENTIFICADOR MAS MAS
Rule 31    increment_statement -> IDENTIFICADOR MAS_IGUAL NUMERO
Rule 32    arithmetic_operation -> IDENTIFICADOR IGUAL NUMERO POR IDENTIFICADOR
Rule 33    arithmetic_operation -> IDENTIFICADOR IGUAL NUMERO MAS IDENTIFICADOR
Rule 34    arithmetic_operation -> IDENTIFICADOR IGUAL IDENTIFICADOR POR NUMERO
Rule 35    arithmetic_operation -> IDENTIFICADOR IGUAL IDENTIFICADOR MAS NUMERO
Rule 36    arithmetic_operation -> IDENTIFICADOR IGUAL IDENTIFICADOR MAS IDENTIFICADOR
Rule 37    arithmetic_operation -> IDENTIFICADOR IGUAL NUMERO MAS NUMERO
Rule 38    statement -> <empty>
Rule 39    statement -> pakatreice_statement
Rule 40    statement -> print_go_statement
Rule 41    statement -> print_statement
Rule 42    statement -> variable_declaration
Rule 43    statement -> variable_declaration_simple
Rule 44    statement -> float_declaration
Rule 45    statement -> string_declaration
Rule 46    statement -> if_statement
Rule 47    statement -> while_statement
Rule 48    statement -> library_statement
Rule 49    statement -> main_statement
Rule 50    statement -> line_declaration_statement
Rule 51    statement -> for_statement
Rule 52    statement -> assignment_statement
Rule 53    statement -> condition_statement
Rule 54    statement -> increment_statement
Rule 55    statement -> arithmetic_operation
Rule 56    statement -> condition
Rule 57    statement_list -> statement
Rule 58    statement_list -> statement_list statement

Terminals, with rules where they appear

ABIERTO              : 8 9 14 15 15 15 15 15 16 17 21 23
AND                  : 14
CADENA               : 5 9 13 16
CERRADO              : 8 9 14 15 15 15 15 15 16 17 21 23
CLASS                : 
COMA                 : 15 22 22
COMILLAS             : 
DO                   : 17
DOUBLE               : 
ELSE                 : 
ENDDO                : 17
ENDWHILE             : 17
FLOAT                : 12
FMT                  : 9
FOR                  : 15 23
FUNC                 : 8
GATO                 : 20
H                    : 20
IDENTIFICADOR        : 4 10 11 12 13 15 15 15 16 18 19 22 22 22 24 25 25 25 26 27 28 29 30 31 32 32 33 33 34 34 35 35 36 36 36 37
IF                   : 14
IGUAL                : 10 12 13 15 18 18 19 19 22 24 25 27 27 32 33 34 35 36 37
IMPORT               : 5
IN                   : 15
INCLUDE              : 20
INPUT                : 15
INT                  : 10 11 18 21 22
LLAVE_ABIERTA        : 8 14 15 15 15 21 23
LLAVE_CERRADA        : 8 14 15 15 15 21 23
MAIN                 : 21
MAS                  : 16 25 30 30 33 35 36 37
MAS_IGUAL            : 31
MAYOR                : 14 15 15 20 28
MAYOR_IGUAL          : 29
MENOR                : 20
MENOR_IGUAL          : 26
NUMERO               : 10 12 12 14 14 15 15 15 15 15 15 15 18 19 21 22 24 26 27 28 29 31 32 33 34 35 37 37
OUT                  : 16
PACKAGE              : 4
POR                  : 15 32 34
PRINTLN              : 9 16
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUNTO                : 9 12 16 16 20
PUNTO_Y_COMA         : 10 11 12 13 15 15 16 17 17 21 22 23 23 23 23
RANGE                : 15
RETURN               : 21
STATIC               : 
STDIO                : 20
STRING               : 13
SYSTEM               : 16
VOID                 : 
WHILE                : 15 15 17
error                : 
pepe                 : 8

Nonterminals, with rules where they appear

arithmetic_operation : 17 17 23 23 55
assignment_statement : 23 52
condition            : 17 56
condition_statement  : 14 23 53
float_declaration    : 44
for_statement        : 21 51
function             : 6 7
function_list        : 3 7
go_program           : 2
if_statement         : 46
import_statement     : 3
increment_statement  : 15 23 54
library_statement    : 48
line_declaration_statement : 21 50
main_statement       : 49
package_statement    : 3
pakatreice_statement : 39
print_go_statement   : 40
print_statement      : 41
program              : 0
statement            : 57 58
statement_list       : 1 8 58
string_declaration   : 45
variable_declaration : 42
variable_declaration_simple : 43
while_statement      : 14 47

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) program -> . go_program
    (57) statement_list -> . statement
    (58) statement_list -> . statement_list statement
    (3) go_program -> . package_statement import_statement function_list
    (38) statement -> .
    (39) statement -> . pakatreice_statement
    (40) statement -> . print_go_statement
    (41) statement -> . print_statement
    (42) statement -> . variable_declaration
    (43) statement -> . variable_declaration_simple
    (44) statement -> . float_declaration
    (45) statement -> . string_declaration
    (46) statement -> . if_statement
    (47) statement -> . while_statement
    (48) statement -> . library_statement
    (49) statement -> . main_statement
    (50) statement -> . line_declaration_statement
    (51) statement -> . for_statement
    (52) statement -> . assignment_statement
    (53) statement -> . condition_statement
    (54) statement -> . increment_statement
    (55) statement -> . arithmetic_operation
    (56) statement -> . condition
    (4) package_statement -> . PACKAGE IDENTIFICADOR
    (17) pakatreice_statement -> . DO arithmetic_operation PUNTO_Y_COMA arithmetic_operation PUNTO_Y_COMA ENDDO WHILE ABIERTO condition CERRADO ENDWHILE
    (9) print_go_statement -> . FMT PUNTO PRINTLN ABIERTO CADENA CERRADO
    (16) print_statement -> . SYSTEM PUNTO OUT PUNTO PRINTLN ABIERTO CADENA MAS IDENTIFICADOR CERRADO PUNTO_Y_COMA
    (10) variable_declaration -> . INT IDENTIFICADOR IGUAL NUMERO PUNTO_Y_COMA
    (11) variable_declaration_simple -> . INT IDENTIFICADOR PUNTO_Y_COMA
    (12) float_declaration -> . FLOAT IDENTIFICADOR IGUAL NUMERO PUNTO NUMERO PUNTO_Y_COMA
    (13) string_declaration -> . STRING IDENTIFICADOR IGUAL CADENA PUNTO_Y_COMA
    (14) if_statement -> . IF ABIERTO condition_statement AND NUMERO MAYOR NUMERO CERRADO LLAVE_ABIERTA while_statement LLAVE_CERRADA
    (15) while_statement -> . WHILE ABIERTO IDENTIFICADOR MAYOR NUMERO CERRADO LLAVE_ABIERTA INPUT ABIERTO NUMERO CERRADO PUNTO_Y_COMA increment_statement LLAVE_CERRADA WHILE ABIERTO NUMERO MAYOR NUMERO CERRADO LLAVE_ABIERTA FOR ABIERTO IDENTIFICADOR IN RANGE ABIERTO COMA NUMERO CERRADO CERRADO LLAVE_ABIERTA IDENTIFICADOR IGUAL NUMERO POR NUMERO PUNTO_Y_COMA LLAVE_CERRADA LLAVE_CERRADA
    (20) library_statement -> . GATO INCLUDE MENOR STDIO PUNTO H MAYOR
    (21) main_statement -> . INT MAIN ABIERTO CERRADO LLAVE_ABIERTA line_declaration_statement for_statement RETURN NUMERO PUNTO_Y_COMA LLAVE_CERRADA
    (22) line_declaration_statement -> . INT IDENTIFICADOR COMA IDENTIFICADOR COMA IDENTIFICADOR IGUAL NUMERO PUNTO_Y_COMA
    (23) for_statement -> . FOR ABIERTO assignment_statement PUNTO_Y_COMA condition_statement PUNTO_Y_COMA increment_statement CERRADO LLAVE_ABIERTA arithmetic_operation PUNTO_Y_COMA arithmetic_operation PUNTO_Y_COMA LLAVE_CERRADA
    (24) assignment_statement -> . IDENTIFICADOR IGUAL NUMERO
    (25) assignment_statement -> . IDENTIFICADOR IGUAL IDENTIFICADOR MAS IDENTIFICADOR
    (26) condition_statement -> . IDENTIFICADOR MENOR_IGUAL NUMERO
    (27) condition_statement -> . IDENTIFICADOR IGUAL IGUAL NUMERO
    (28) condition_statement -> . IDENTIFICADOR MAYOR NUMERO
    (29) condition_statement -> . IDENTIFICADOR MAYOR_IGUAL NUMERO
    (30) increment_statement -> . IDENTIFICADOR MAS MAS
    (31) increment_statement -> . IDENTIFICADOR MAS_IGUAL NUMERO
    (32) arithmetic_operation -> . IDENTIFICADOR IGUAL NUMERO POR IDENTIFICADOR
    (33) arithmetic_operation -> . IDENTIFICADOR IGUAL NUMERO MAS IDENTIFICADOR
    (34) arithmetic_operation -> . IDENTIFICADOR IGUAL IDENTIFICADOR POR NUMERO
    (35) arithmetic_operation -> . IDENTIFICADOR IGUAL IDENTIFICADOR MAS NUMERO
    (36) arithmetic_operation -> . IDENTIFICADOR IGUAL IDENTIFICADOR MAS IDENTIFICADOR
    (37) arithmetic_operation -> . IDENTIFICADOR IGUAL NUMERO MAS NUMERO
    (18) condition -> . INT IDENTIFICADOR IGUAL IGUAL NUMERO
    (19) condition -> . IDENTIFICADOR IGUAL IGUAL NUMERO

  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FMT resolved as shift
  ! shift/reduce conflict for SYSTEM resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for GATO resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
    $end            reduce using rule 38 (statement -> .)
    PACKAGE         shift and go to state 24
    DO              shift and go to state 26
    FMT             shift and go to state 28
    SYSTEM          shift and go to state 29
    INT             shift and go to state 30
    FLOAT           shift and go to state 31
    STRING          shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 27
    GATO            shift and go to state 35
    FOR             shift and go to state 34
    IDENTIFICADOR   shift and go to state 25

  ! DO              [ reduce using rule 38 (statement -> .) ]
  ! FMT             [ reduce using rule 38 (statement -> .) ]
  ! SYSTEM          [ reduce using rule 38 (statement -> .) ]
  ! INT             [ reduce using rule 38 (statement -> .) ]
  ! FLOAT           [ reduce using rule 38 (statement -> .) ]
  ! STRING          [ reduce using rule 38 (statement -> .) ]
  ! IF              [ reduce using rule 38 (statement -> .) ]
  ! WHILE           [ reduce using rule 38 (statement -> .) ]
  ! GATO            [ reduce using rule 38 (statement -> .) ]
  ! FOR             [ reduce using rule 38 (statement -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 38 (statement -> .) ]

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    go_program                     shift and go to state 3
    statement                      shift and go to state 4
    package_statement              shift and go to state 5
    pakatreice_statement           shift and go to state 6
    print_go_statement             shift and go to state 7
    print_statement                shift and go to state 8
    variable_declaration           shift and go to state 9
    variable_declaration_simple    shift and go to state 10
    float_declaration              shift and go to state 11
    string_declaration             shift and go to state 12
    if_statement                   shift and go to state 13
    while_statement                shift and go to state 14
    library_statement              shift and go to state 15
    main_statement                 shift and go to state 16
    line_declaration_statement     shift and go to state 17
    for_statement                  shift and go to state 18
    assignment_statement           shift and go to state 19
    condition_statement            shift and go to state 20
    increment_statement            shift and go to state 21
    arithmetic_operation           shift and go to state 22
    condition                      shift and go to state 23

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (58) statement_list -> statement_list . statement
    (38) statement -> .
    (39) statement -> . pakatreice_statement
    (40) statement -> . print_go_statement
    (41) statement -> . print_statement
    (42) statement -> . variable_declaration
    (43) statement -> . variable_declaration_simple
    (44) statement -> . float_declaration
    (45) statement -> . string_declaration
    (46) statement -> . if_statement
    (47) statement -> . while_statement
    (48) statement -> . library_statement
    (49) statement -> . main_statement
    (50) statement -> . line_declaration_statement
    (51) statement -> . for_statement
    (52) statement -> . assignment_statement
    (53) statement -> . condition_statement
    (54) statement -> . increment_statement
    (55) statement -> . arithmetic_operation
    (56) statement -> . condition
    (17) pakatreice_statement -> . DO arithmetic_operation PUNTO_Y_COMA arithmetic_operation PUNTO_Y_COMA ENDDO WHILE ABIERTO condition CERRADO ENDWHILE
    (9) print_go_statement -> . FMT PUNTO PRINTLN ABIERTO CADENA CERRADO
    (16) print_statement -> . SYSTEM PUNTO OUT PUNTO PRINTLN ABIERTO CADENA MAS IDENTIFICADOR CERRADO PUNTO_Y_COMA
    (10) variable_declaration -> . INT IDENTIFICADOR IGUAL NUMERO PUNTO_Y_COMA
    (11) variable_declaration_simple -> . INT IDENTIFICADOR PUNTO_Y_COMA
    (12) float_declaration -> . FLOAT IDENTIFICADOR IGUAL NUMERO PUNTO NUMERO PUNTO_Y_COMA
    (13) string_declaration -> . STRING IDENTIFICADOR IGUAL CADENA PUNTO_Y_COMA
    (14) if_statement -> . IF ABIERTO condition_statement AND NUMERO MAYOR NUMERO CERRADO LLAVE_ABIERTA while_statement LLAVE_CERRADA
    (15) while_statement -> . WHILE ABIERTO IDENTIFICADOR MAYOR NUMERO CERRADO LLAVE_ABIERTA INPUT ABIERTO NUMERO CERRADO PUNTO_Y_COMA increment_statement LLAVE_CERRADA WHILE ABIERTO NUMERO MAYOR NUMERO CERRADO LLAVE_ABIERTA FOR ABIERTO IDENTIFICADOR IN RANGE ABIERTO COMA NUMERO CERRADO CERRADO LLAVE_ABIERTA IDENTIFICADOR IGUAL NUMERO POR NUMERO PUNTO_Y_COMA LLAVE_CERRADA LLAVE_CERRADA
    (20) library_statement -> . GATO INCLUDE MENOR STDIO PUNTO H MAYOR
    (21) main_statement -> . INT MAIN ABIERTO CERRADO LLAVE_ABIERTA line_declaration_statement for_statement RETURN NUMERO PUNTO_Y_COMA LLAVE_CERRADA
    (22) line_declaration_statement -> . INT IDENTIFICADOR COMA IDENTIFICADOR COMA IDENTIFICADOR IGUAL NUMERO PUNTO_Y_COMA
    (23) for_statement -> . FOR ABIERTO assignment_statement PUNTO_Y_COMA condition_statement PUNTO_Y_COMA increment_statement CERRADO LLAVE_ABIERTA arithmetic_operation PUNTO_Y_COMA arithmetic_operation PUNTO_Y_COMA LLAVE_CERRADA
    (24) assignment_statement -> . IDENTIFICADOR IGUAL NUMERO
    (25) assignment_statement -> . IDENTIFICADOR IGUAL IDENTIFICADOR MAS IDENTIFICADOR
    (26) condition_statement -> . IDENTIFICADOR MENOR_IGUAL NUMERO
    (27) condition_statement -> . IDENTIFICADOR IGUAL IGUAL NUMERO
    (28) condition_statement -> . IDENTIFICADOR MAYOR NUMERO
    (29) condition_statement -> . IDENTIFICADOR MAYOR_IGUAL NUMERO
    (30) increment_statement -> . IDENTIFICADOR MAS MAS
    (31) increment_statement -> . IDENTIFICADOR MAS_IGUAL NUMERO
    (32) arithmetic_operation -> . IDENTIFICADOR IGUAL NUMERO POR IDENTIFICADOR
    (33) arithmetic_operation -> . IDENTIFICADOR IGUAL NUMERO MAS IDENTIFICADOR
    (34) arithmetic_operation -> . IDENTIFICADOR IGUAL IDENTIFICADOR POR NUMERO
    (35) arithmetic_operation -> . IDENTIFICADOR IGUAL IDENTIFICADOR MAS NUMERO
    (36) arithmetic_operation -> . IDENTIFICADOR IGUAL IDENTIFICADOR MAS IDENTIFICADOR
    (37) arithmetic_operation -> . IDENTIFICADOR IGUAL NUMERO MAS NUMERO
    (18) condition -> . INT IDENTIFICADOR IGUAL IGUAL NUMERO
    (19) condition -> . IDENTIFICADOR IGUAL IGUAL NUMERO

  ! reduce/reduce conflict for $end resolved using rule 1 (program -> statement_list .)
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FMT resolved as shift
  ! shift/reduce conflict for SYSTEM resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for GATO resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
    $end            reduce using rule 1 (program -> statement_list .)
    DO              shift and go to state 26
    FMT             shift and go to state 28
    SYSTEM          shift and go to state 29
    INT             shift and go to state 30
    FLOAT           shift and go to state 31
    STRING          shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 27
    GATO            shift and go to state 35
    FOR             shift and go to state 34
    IDENTIFICADOR   shift and go to state 25

  ! DO              [ reduce using rule 38 (statement -> .) ]
  ! FMT             [ reduce using rule 38 (statement -> .) ]
  ! SYSTEM          [ reduce using rule 38 (statement -> .) ]
  ! INT             [ reduce using rule 38 (statement -> .) ]
  ! FLOAT           [ reduce using rule 38 (statement -> .) ]
  ! STRING          [ reduce using rule 38 (statement -> .) ]
  ! IF              [ reduce using rule 38 (statement -> .) ]
  ! WHILE           [ reduce using rule 38 (statement -> .) ]
  ! GATO            [ reduce using rule 38 (statement -> .) ]
  ! FOR             [ reduce using rule 38 (statement -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 38 (statement -> .) ]
  ! $end            [ reduce using rule 38 (statement -> .) ]

    statement                      shift and go to state 36
    pakatreice_statement           shift and go to state 6
    print_go_statement             shift and go to state 7
    print_statement                shift and go to state 8
    variable_declaration           shift and go to state 9
    variable_declaration_simple    shift and go to state 10
    float_declaration              shift and go to state 11
    string_declaration             shift and go to state 12
    if_statement                   shift and go to state 13
    while_statement                shift and go to state 14
    library_statement              shift and go to state 15
    main_statement                 shift and go to state 16
    line_declaration_statement     shift and go to state 17
    for_statement                  shift and go to state 18
    assignment_statement           shift and go to state 19
    condition_statement            shift and go to state 20
    increment_statement            shift and go to state 21
    arithmetic_operation           shift and go to state 22
    condition                      shift and go to state 23

state 3

    (2) program -> go_program .

    $end            reduce using rule 2 (program -> go_program .)


state 4

    (57) statement_list -> statement .

    DO              reduce using rule 57 (statement_list -> statement .)
    FMT             reduce using rule 57 (statement_list -> statement .)
    SYSTEM          reduce using rule 57 (statement_list -> statement .)
    INT             reduce using rule 57 (statement_list -> statement .)
    FLOAT           reduce using rule 57 (statement_list -> statement .)
    STRING          reduce using rule 57 (statement_list -> statement .)
    IF              reduce using rule 57 (statement_list -> statement .)
    WHILE           reduce using rule 57 (statement_list -> statement .)
    GATO            reduce using rule 57 (statement_list -> statement .)
    FOR             reduce using rule 57 (statement_list -> statement .)
    IDENTIFICADOR   reduce using rule 57 (statement_list -> statement .)
    $end            reduce using rule 57 (statement_list -> statement .)
    LLAVE_CERRADA   reduce using rule 57 (statement_list -> statement .)


state 5

    (3) go_program -> package_statement . import_statement function_list
    (5) import_statement -> . IMPORT CADENA

    IMPORT          shift and go to state 38

    import_statement               shift and go to state 37

state 6

    (39) statement -> pakatreice_statement .

    DO              reduce using rule 39 (statement -> pakatreice_statement .)
    FMT             reduce using rule 39 (statement -> pakatreice_statement .)
    SYSTEM          reduce using rule 39 (statement -> pakatreice_statement .)
    INT             reduce using rule 39 (statement -> pakatreice_statement .)
    FLOAT           reduce using rule 39 (statement -> pakatreice_statement .)
    STRING          reduce using rule 39 (statement -> pakatreice_statement .)
    IF              reduce using rule 39 (statement -> pakatreice_statement .)
    WHILE           reduce using rule 39 (statement -> pakatreice_statement .)
    GATO            reduce using rule 39 (statement -> pakatreice_statement .)
    FOR             reduce using rule 39 (statement -> pakatreice_statement .)
    IDENTIFICADOR   reduce using rule 39 (statement -> pakatreice_statement .)
    $end            reduce using rule 39 (statement -> pakatreice_statement .)
    LLAVE_CERRADA   reduce using rule 39 (statement -> pakatreice_statement .)


state 7

    (40) statement -> print_go_statement .

    DO              reduce using rule 40 (statement -> print_go_statement .)
    FMT             reduce using rule 40 (statement -> print_go_statement .)
    SYSTEM          reduce using rule 40 (statement -> print_go_statement .)
    INT             reduce using rule 40 (statement -> print_go_statement .)
    FLOAT           reduce using rule 40 (statement -> print_go_statement .)
    STRING          reduce using rule 40 (statement -> print_go_statement .)
    IF              reduce using rule 40 (statement -> print_go_statement .)
    WHILE           reduce using rule 40 (statement -> print_go_statement .)
    GATO            reduce using rule 40 (statement -> print_go_statement .)
    FOR             reduce using rule 40 (statement -> print_go_statement .)
    IDENTIFICADOR   reduce using rule 40 (statement -> print_go_statement .)
    $end            reduce using rule 40 (statement -> print_go_statement .)
    LLAVE_CERRADA   reduce using rule 40 (statement -> print_go_statement .)


state 8

    (41) statement -> print_statement .

    DO              reduce using rule 41 (statement -> print_statement .)
    FMT             reduce using rule 41 (statement -> print_statement .)
    SYSTEM          reduce using rule 41 (statement -> print_statement .)
    INT             reduce using rule 41 (statement -> print_statement .)
    FLOAT           reduce using rule 41 (statement -> print_statement .)
    STRING          reduce using rule 41 (statement -> print_statement .)
    IF              reduce using rule 41 (statement -> print_statement .)
    WHILE           reduce using rule 41 (statement -> print_statement .)
    GATO            reduce using rule 41 (statement -> print_statement .)
    FOR             reduce using rule 41 (statement -> print_statement .)
    IDENTIFICADOR   reduce using rule 41 (statement -> print_statement .)
    $end            reduce using rule 41 (statement -> print_statement .)
    LLAVE_CERRADA   reduce using rule 41 (statement -> print_statement .)


state 9

    (42) statement -> variable_declaration .

    DO              reduce using rule 42 (statement -> variable_declaration .)
    FMT             reduce using rule 42 (statement -> variable_declaration .)
    SYSTEM          reduce using rule 42 (statement -> variable_declaration .)
    INT             reduce using rule 42 (statement -> variable_declaration .)
    FLOAT           reduce using rule 42 (statement -> variable_declaration .)
    STRING          reduce using rule 42 (statement -> variable_declaration .)
    IF              reduce using rule 42 (statement -> variable_declaration .)
    WHILE           reduce using rule 42 (statement -> variable_declaration .)
    GATO            reduce using rule 42 (statement -> variable_declaration .)
    FOR             reduce using rule 42 (statement -> variable_declaration .)
    IDENTIFICADOR   reduce using rule 42 (statement -> variable_declaration .)
    $end            reduce using rule 42 (statement -> variable_declaration .)
    LLAVE_CERRADA   reduce using rule 42 (statement -> variable_declaration .)


state 10

    (43) statement -> variable_declaration_simple .

    DO              reduce using rule 43 (statement -> variable_declaration_simple .)
    FMT             reduce using rule 43 (statement -> variable_declaration_simple .)
    SYSTEM          reduce using rule 43 (statement -> variable_declaration_simple .)
    INT             reduce using rule 43 (statement -> variable_declaration_simple .)
    FLOAT           reduce using rule 43 (statement -> variable_declaration_simple .)
    STRING          reduce using rule 43 (statement -> variable_declaration_simple .)
    IF              reduce using rule 43 (statement -> variable_declaration_simple .)
    WHILE           reduce using rule 43 (statement -> variable_declaration_simple .)
    GATO            reduce using rule 43 (statement -> variable_declaration_simple .)
    FOR             reduce using rule 43 (statement -> variable_declaration_simple .)
    IDENTIFICADOR   reduce using rule 43 (statement -> variable_declaration_simple .)
    $end            reduce using rule 43 (statement -> variable_declaration_simple .)
    LLAVE_CERRADA   reduce using rule 43 (statement -> variable_declaration_simple .)


state 11

    (44) statement -> float_declaration .

    DO              reduce using rule 44 (statement -> float_declaration .)
    FMT             reduce using rule 44 (statement -> float_declaration .)
    SYSTEM          reduce using rule 44 (statement -> float_declaration .)
    INT             reduce using rule 44 (statement -> float_declaration .)
    FLOAT           reduce using rule 44 (statement -> float_declaration .)
    STRING          reduce using rule 44 (statement -> float_declaration .)
    IF              reduce using rule 44 (statement -> float_declaration .)
    WHILE           reduce using rule 44 (statement -> float_declaration .)
    GATO            reduce using rule 44 (statement -> float_declaration .)
    FOR             reduce using rule 44 (statement -> float_declaration .)
    IDENTIFICADOR   reduce using rule 44 (statement -> float_declaration .)
    $end            reduce using rule 44 (statement -> float_declaration .)
    LLAVE_CERRADA   reduce using rule 44 (statement -> float_declaration .)


state 12

    (45) statement -> string_declaration .

    DO              reduce using rule 45 (statement -> string_declaration .)
    FMT             reduce using rule 45 (statement -> string_declaration .)
    SYSTEM          reduce using rule 45 (statement -> string_declaration .)
    INT             reduce using rule 45 (statement -> string_declaration .)
    FLOAT           reduce using rule 45 (statement -> string_declaration .)
    STRING          reduce using rule 45 (statement -> string_declaration .)
    IF              reduce using rule 45 (statement -> string_declaration .)
    WHILE           reduce using rule 45 (statement -> string_declaration .)
    GATO            reduce using rule 45 (statement -> string_declaration .)
    FOR             reduce using rule 45 (statement -> string_declaration .)
    IDENTIFICADOR   reduce using rule 45 (statement -> string_declaration .)
    $end            reduce using rule 45 (statement -> string_declaration .)
    LLAVE_CERRADA   reduce using rule 45 (statement -> string_declaration .)


state 13

    (46) statement -> if_statement .

    DO              reduce using rule 46 (statement -> if_statement .)
    FMT             reduce using rule 46 (statement -> if_statement .)
    SYSTEM          reduce using rule 46 (statement -> if_statement .)
    INT             reduce using rule 46 (statement -> if_statement .)
    FLOAT           reduce using rule 46 (statement -> if_statement .)
    STRING          reduce using rule 46 (statement -> if_statement .)
    IF              reduce using rule 46 (statement -> if_statement .)
    WHILE           reduce using rule 46 (statement -> if_statement .)
    GATO            reduce using rule 46 (statement -> if_statement .)
    FOR             reduce using rule 46 (statement -> if_statement .)
    IDENTIFICADOR   reduce using rule 46 (statement -> if_statement .)
    $end            reduce using rule 46 (statement -> if_statement .)
    LLAVE_CERRADA   reduce using rule 46 (statement -> if_statement .)


state 14

    (47) statement -> while_statement .

    DO              reduce using rule 47 (statement -> while_statement .)
    FMT             reduce using rule 47 (statement -> while_statement .)
    SYSTEM          reduce using rule 47 (statement -> while_statement .)
    INT             reduce using rule 47 (statement -> while_statement .)
    FLOAT           reduce using rule 47 (statement -> while_statement .)
    STRING          reduce using rule 47 (statement -> while_statement .)
    IF              reduce using rule 47 (statement -> while_statement .)
    WHILE           reduce using rule 47 (statement -> while_statement .)
    GATO            reduce using rule 47 (statement -> while_statement .)
    FOR             reduce using rule 47 (statement -> while_statement .)
    IDENTIFICADOR   reduce using rule 47 (statement -> while_statement .)
    $end            reduce using rule 47 (statement -> while_statement .)
    LLAVE_CERRADA   reduce using rule 47 (statement -> while_statement .)


state 15

    (48) statement -> library_statement .

    DO              reduce using rule 48 (statement -> library_statement .)
    FMT             reduce using rule 48 (statement -> library_statement .)
    SYSTEM          reduce using rule 48 (statement -> library_statement .)
    INT             reduce using rule 48 (statement -> library_statement .)
    FLOAT           reduce using rule 48 (statement -> library_statement .)
    STRING          reduce using rule 48 (statement -> library_statement .)
    IF              reduce using rule 48 (statement -> library_statement .)
    WHILE           reduce using rule 48 (statement -> library_statement .)
    GATO            reduce using rule 48 (statement -> library_statement .)
    FOR             reduce using rule 48 (statement -> library_statement .)
    IDENTIFICADOR   reduce using rule 48 (statement -> library_statement .)
    $end            reduce using rule 48 (statement -> library_statement .)
    LLAVE_CERRADA   reduce using rule 48 (statement -> library_statement .)


state 16

    (49) statement -> main_statement .
